@@ -1,3 +1,9 @@
+2005-06-01  Feng Wang  <fengwang@nudt.edu.cn>
+
+	PR fortran/20883
+	* gfortran/assign_4.f90: New test.
+	* gfortran/assign_2.f90: Change compile to run.
+
 2005-05-31  Geoffrey Keating  <geoffk@geoffk.org>
 
 	* lib/target-supports.exp 
